# xml_validator

./: .gitignore  README.md  pyproject.toml  test.py  xml_validator.py
src/xml_validator/: __main__.py  cli.py  schema.py
tests/: test_cli.py  test_main.py  test_schema.py
