[build-systems]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml_validator"
version = "1.0.0"
description = ""
authors = [
	{ name = "Joshua Perry", email = "r0r-5chach.xyz@proton.me" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"lxml>=6.0.0"
]

[project.scripts]
xml-validator = "xml_validator.__main__:main"

[project.optional-dependencies]
test = [
	"pytest>=8.4.1",
	"pytest-cov>=6.2.1"
]
dev = [
	"pytest>=8.4.1",
	"pytest-cov>=6.2.1"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
	"-v",
	"--strict-markers",
	"--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
	"tests/*",
	"*/test_*"
]
